src/SASS/Screens/game.scss
div.game {
	$animation-duration: 0.5s;

	overflow: hidden;
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 10px;
	width: 100vw;
	height: 100vh;
	background-image: url("../../Assets/background.jpg");
	padding: 20px;

	* {
		margin: 0;
		padding: 0;
		box-sizing: border-box;
		overflow: hidden;
	}

	//LEVELS AND POINTS
	.stage {
		// flex-shrink: 0;
		gap: 20%;
		margin: 0 auto;
		background: none;
		width: 80%;
		font-weight: bolder;
		font-size: 20px;
		color: white;
		text-shadow: black 5px 5px 10px;
		box-shadow: none;
		display: flex;
		justify-content: center;
	}

	.levels {
		color: red;
	}

	.points {
		color: green;
	}

	//MAZE
	.mazeContainer {
		position: relative;
		$border-radius: 20px;
		height: 1px; // Moet 1px hebben voor het tekenen van het canvas, width en height worden daarna in de MazeGenerator.ts gezet
		flex-grow: 1;
		margin: 0 auto;
		aspect-ratio: 1 / 1;
		border-radius: $border-radius;
		background: white;

		#mazeCanvas {
			width: 100%;
			height: 100%;
			border-radius: $border-radius;
			border: 2px solid black;
			background: url("../../Assets/floor_texture.webp");
			transition: all $animation-duration ease-out;
		}

		#player {
			opacity: 0; // Wordt gezet in de MazeGenerator.ts
			position: absolute;
			z-index: 1;
			background: url("../../Assets/Player/piet.webp");
			background-position: center center;
			background-repeat: no-repeat;
			background-size: contain;
			transition: top $animation-duration ease-out,
				left $animation-duration ease-out, opacity $animation-duration ease-out;

			&.movingRight {
				background-image: url("../../Assets/Player/pietMovingHorizontal.gif");
			}

			&.movingLeft {
				@extend .movingRight;
				transform: scale(-1, 1);
			}

			&.movingDown {
				background-image: url("../../Assets/Player/pietMovingForward.gif");
			}

			&.movingUp {
				background-image: url("../../Assets/Player/pietMovingBackwards.gif");
			}
		}

		&.darkOverlay {
			background-color: black;
		}
	}

	//BUTTONS
	.buttonContainer {
		flex-shrink: 0;
		margin: 0 auto;
		width: 50%;
		background: none;
		display: flex;
		justify-content: center;
		align-items: center;
		box-shadow: none;
		user-select: none;

		.buttonGame {
			margin: 5px;
			padding: 0;
			font-weight: bold;
			width: 80px;
			height: 80px;
			display: flex;
			justify-content: center;
			align-items: center;
			cursor: pointer;

			img {
				user-select: none;
			}
		}

		.buttonGame:focus{
			outline: 2.5px solid black;
		}		

		.arrowUpDown {
			display: flex;
			flex-direction: column;
			gap: 15px;
			background: none;
			box-shadow: none;
			margin: 0;
		}

		.buttonImg {
			width: 60px;
			height: 60px;
		}
	}

	//RESPONSIVE RESOLUTIONS
	//IPAD PRO RESOLUTION
	@media screen and (max-width: 1024px) {
		.mazeContainer {
			aspect-ratio: 3/4;

			#mazeCanvas {
				width: 100%;
				height: 125%;
			}
		}
		.stage {
			gap: 65%;
			font-size: 24px;
		}
		.buttonContainer{
			margin-bottom: 10px;
		}
	}

	//IPHONE XR
	@media screen and (max-width: 500px) {
		.mazeContainer {
			aspect-ratio: 5/8;

			#mazeCanvas {
				width: 125%;
				height: 100%;
			}
		}
		.stage {
			gap: 20%;
			font-size: 20px;
		}
		.buttonContainer {
			width: 80%;
		}
	}
}

